fix some typo in en.json

--- a/frontend/src/assets/locales/en.json
+++ b/frontend/src/assets/locales/en.json
@@ -81,7 +81,7 @@
     "monthlyApplicationsHeader": "Monthly applications",
     "averageApplications": "Average Applications/Month",
     "peakApplicationMonth": "Peak Application Month",
-    "interviewConversionRate": "Interview Conversion Rateး",
+    "interviewConversionRate": "Interview Conversion Rate",
     "applicationStatusDistribution": "Application Status Distribution",
     "applicationTrendOverTime": "Application Trend Over Time"
   },
