change some config

--- a/frontend/src/assets/locales/en.json
+++ b/frontend/src/assets/locales/en.json
@@ -22,7 +22,8 @@
   "allJobsText": {
     "job": "Job",
     "jobs": "Jobs",
-    "found": "found"
+    "found": "found",
+    "jobsLoading": "Loading Jobs..."
   },
   "singleJobText": {
     "commentLabel": "Comments",
